Разметка главной страницы

--- a/index.html
+++ b/index.html
@@ -5,8 +5,246 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header> 
+      <nav>
+        <a>
+          <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Логотип интернет-магазина «DEVICE»">
+        </a>
+        <ul class="navigation">
+          <li><a href="catalog.html">Каталог товаров</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Гарантия</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+        <ul class="user-menu">
+          <li><a href="">Войти</a></li>
+          <li><a href="">Сравнить</a></li>
+          <li><a href="">Корзина</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Интернет-магазин «DEVICE»</h1>
+      <section>
+        <h2>Бестселлеры</h2>
+        <ol>
+          <li>
+          <h3>Делай селфи, как Бен Стиллер!</h3>
+          <figure>
+          <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Самая длинная палка для селфи">
+          <figcaption>
+            Самая длинная палка для селфи доступна в нашем магазине.<br> 
+            Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+          </figcaption>
+        </figure>
+        <table>
+          <tr>
+            <th>Длина палки</th>
+            <th>Вес палки</th>
+            <th>Материал</th>
+          </tr>
+          <tr>
+            <td>8,5 м</td>
+            <td>5 кг</td>
+            <td>Карбон</td>
+          </tr>
+        </table>
+        <p>
+        <a href="">Подробнее</a>
+        </p>
+        <nav>
+          <a href="#">Первый слайд</a>
+          <a href="#">Второй слайд</a>
+          <a href="#">Третий слайд</a>
+        </nav>
+      </li>
+      </ol>
+      </section>
+      <section>
+        <h2>Каталог</h2>
+        <ul>
+          <li>
+            <a href="">
+            <h3>Виртуальная реальность</h3>
+            <p>
+              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Раздел «Виртуальная реальность»">
+            </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+            <h3>Моноподы для селфи</h3>
+            <p>
+              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Раздел «Моноподы для селфи»">
+            </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+            <h3>Экшн-камеры</h3>
+            <p>
+              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Раздел «Экшн-камеры»">
+            </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+            <h3>Фитнес-браслеты</h3>
+            <p>
+              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Раздел «Фитнес-браслеты»">
+            </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+            <h3>Умные часы</h3>
+            <p>
+              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Раздел «Умные часы»">
+            </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+            <h3>Квадрокоптеры</h3>
+            <p>
+              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="">
+            </p>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Перечень услуг</h2>Раздел «Квадрокоптеры»
+        <ul>
+          <li>
+            <h3>Доставка</h3>
+            <p>
+              Мы с удовольствием доставим ваш товар прямо к вашему<br>  
+              подъезду совершенно бесплатно! Ведь мы неплохо<br>  
+              заработаем, поднимая его на ваш этаж.
+            </p>
+          </li>
+          <li>
+            <h3>Гарантия</h3>
+            <p>
+              Если из-за возгорания купленного у нас товара у вас сгорит дом —<br> 
+              не переживайте, мы выдадим вам новый.<br>
+              Товар, не дом, конечно же.
+            </p>
+          </li>
+          <li>
+          <h3>Кредит</h3>
+          <p>
+            Залезть в долговую яму стало проще! Кредитные консультанты<br> 
+            подберут для вас наиболее выгодные<br> 
+            условия кредита. Выгодные для нашего банка, разумеется.
+          </p>
+          </li>
+        </ul>
+        <nav>
+          <a href="#">Доставка</a>
+          <a href="#">Гарантия</a>
+          <a href="#">Кредит</a>
+        </nav>
+      </section>
+      <section>
+        <h2>Производители</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Логотип компании «DJI», производителя мультикоптеров, микроконтроллеров, видеооборудования">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Логотип компании «SP GADGETS», производителя качественных аксессуаров для экшн-камер GoPro">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Логотип компании «GoPro», производителя экшн-камер GoPro и аксессуаров к ним">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Логотип компании «VIVE», производителя систем виртуальной реальности">
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>О нас</h2>
+        <p>
+          Огромный выбор гаджетов не оставит равнодушным гика,<br> 
+          который есть в каждом из нас.
+        </p>
+        <p>
+        Мы можем доставить ваш товар в самые отдаленные точки<br>
+        России! DEVICE работает со многими транспортными компаниями:
+        </p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <p>
+          <a href="">Подробнее о нас</a>
+        </p>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <p>
+          Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете<br> 
+          проверить работоспособность покупки. Всякое бывает.
+        </p>
+        <a href="https://yandex.ru/maps/213/moscow/house/ulitsa_stroiteley_15/Z04YcwVpT0ADQFtvfXp5d3VrZA==/?ll=37.529655%2C55.686980&z=16.65">
+          <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Схема проезда">
+        </a>
+        <p>
+          <a href="">Напишите нам</a>
+        </p>
+      </section>
+    </main>
+    <footer> 
+      <section>
+        <h2>Как нас найти</h2>
+        <a>
+          <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Логотип интернет-магазина «DEVICE»">
+        </a>
+        <p>
+          г. Москва, ул. Строителей, 15<br>
+          Тел.: +7 (495) 495-95-95
+        </p>
+      </section>
+      <section>
+        <h2>Навигация по сайту</h2>
+        <ul>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Гарантия</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Пользовательское меню</h2>
+        <ul>
+          <li><a href="">Войти</a></li>
+          <li><a href="">Сравнить</a></li>
+          <li><a href="">Корзина</a></li>
+        </ul>
+      </section>
+      <section>
+        <h2>Мы в соцсетях</h2>
+        <ul>
+          <li><a href="#">Вконтакте</a></li>
+          <li><a href="#">Фейсбук</a></li>
+          <li><a href="#">Инстаграм</a></li>
+        </ul>
+      </section>
+      <p>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="«HTML Academy»">
+        </a>
+      </p>
+    </footer>
   </body>
 </html>
