Поправила баги (Разметка главной страницы)

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header> 
       <nav>
         <a>
-          <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Логотип интернет-магазина «DEVICE»">
+          <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
         </a>
         <ul class="navigation">
           <li><a href="catalog.html">Каталог товаров</a></li>
@@ -31,13 +31,13 @@
           <li>
           <h3>Делай селфи, как Бен Стиллер!</h3>
           <figure>
-          <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Самая длинная палка для селфи">
+          <img src="https://via.placeholder.com/384x486" width="384" height="486" alt="Самая длинная палка для селфи">
           <figcaption>
             Самая длинная палка для селфи доступна в нашем магазине.<br> 
             Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
           </figcaption>
-        </figure>
-        <table>
+          </figure>
+          <table>
           <tr>
             <th>Длина палки</th>
             <th>Вес палки</th>
@@ -48,17 +48,61 @@
             <td>5 кг</td>
             <td>Карбон</td>
           </tr>
-        </table>
-        <p>
-        <a href="">Подробнее</a>
-        </p>
-        <nav>
-          <a href="#">Первый слайд</a>
-          <a href="#">Второй слайд</a>
-          <a href="#">Третий слайд</a>
-        </nav>
-      </li>
-      </ol>
+          </table>
+          <p>
+          <a href="">Подробнее</a>
+          </p>
+          </li>
+          <li>
+          <h3>Худеем правильно!</h3>
+          <figure>
+          <img src="https://via.placeholder.com/345x485" width="345" height="485" alt="Мотивирующий фитнес-браслет">
+          <figcaption>
+            Мотивирующие фитнес-браслеты помогут найти в себе силы<br> 
+            не пропускать занятия и соблюдать диету.
+          </figcaption>
+          </figure>
+          <table>
+          <tr>
+            <th>Без подзарядки</th>
+          </tr>
+          <tr>
+            <td>48 часов</td>
+          </tr>
+          </table>
+          <p>
+          <a href="">Подробнее</a>
+          </p>
+          </li>
+          <li>
+            <h3>Порхает как бабочка, жалит как пчела!</h3>
+            <figure>
+            <img src="https://via.placeholder.com/526x334" width="526" height="334" alt="Квадрокоптер с мощным лазером">
+            <figcaption>
+              Этот обычный, на первый взгляд, квадрокоптер оснащен<br> 
+              мощным лазером, замаскированным под стандартную камеру.
+            </figcaption>
+            </figure>
+            <table>
+            <tr>
+              <th>Дальность полета</th>
+              <th>Радиус поражения</th>
+            </tr>
+            <tr>
+              <td>800 м</td>
+              <td>50 м</td>
+            </tr>
+            </table>
+            <p>
+            <a href="">Подробнее</a>
+            </p>
+            </li>
+        </ol>
+      <nav>
+        <a href="#">Первый слайд</a>
+        <a href="#">Второй слайд</a>
+        <a href="#">Третий слайд</a>
+      </nav>
       </section>
       <section>
         <h2>Каталог</h2>
@@ -67,7 +111,7 @@
             <a href="">
             <h3>Виртуальная реальность</h3>
             <p>
-              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Раздел «Виртуальная реальность»">
+              <img src="https://via.placeholder.com/97x55" width="97" height="55" alt="Раздел «Виртуальная реальность»">
             </p>
             </a>
           </li>
@@ -75,7 +119,7 @@
             <a href="">
             <h3>Моноподы для селфи</h3>
             <p>
-              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Раздел «Моноподы для селфи»">
+              <img src="https://via.placeholder.com/86x117" width="86" height="117" alt="Раздел «Моноподы для селфи»">
             </p>
             </a>
           </li>
@@ -83,7 +127,7 @@
             <a href="">
             <h3>Экшн-камеры</h3>
             <p>
-              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Раздел «Экшн-камеры»">
+              <img src="https://via.placeholder.com/71x87" width="71" height="87" alt="Раздел «Экшн-камеры»">
             </p>
             </a>
           </li>
@@ -91,7 +135,7 @@
             <a href="">
             <h3>Фитнес-браслеты</h3>
             <p>
-              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Раздел «Фитнес-браслеты»">
+              <img src="https://via.placeholder.com/107x65" width="107" height="65" alt="Раздел «Фитнес-браслеты»">
             </p>
             </a>
           </li>
@@ -99,7 +143,7 @@
             <a href="">
             <h3>Умные часы</h3>
             <p>
-              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Раздел «Умные часы»">
+              <img src="https://via.placeholder.com/56x98" width="56" height="98" alt="Раздел «Умные часы»">
             </p>
             </a>
           </li>
@@ -107,7 +151,7 @@
             <a href="">
             <h3>Квадрокоптеры</h3>
             <p>
-              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="">
+              <img src="https://via.placeholder.com/132x69" width="132" height="69" alt="">
             </p>
             </a>
           </li>
@@ -152,22 +196,22 @@
         <ul>
           <li>
             <a href="">
-              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Логотип компании «DJI», производителя мультикоптеров, микроконтроллеров, видеооборудования">
+              <img src="https://via.placeholder.com/260x100" width="260" height="100" alt="Логотип компании «DJI», производителя мультикоптеров, микроконтроллеров, видеооборудования">
             </a>
           </li>
           <li>
             <a href="">
-              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Логотип компании «SP GADGETS», производителя качественных аксессуаров для экшн-камер GoPro">
+              <img src="https://via.placeholder.com/260x100" width="260" height="100" alt="Логотип компании «SP GADGETS», производителя качественных аксессуаров для экшн-камер GoPro">
             </a>
           </li>
           <li>
             <a href="">
-              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Логотип компании «GoPro», производителя экшн-камер GoPro и аксессуаров к ним">
+              <img src="https://via.placeholder.com/260x100" width="260" height="100" alt="Логотип компании «GoPro», производителя экшн-камер GoPro и аксессуаров к ним">
             </a>
           </li>
           <li>
             <a href="">
-              <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Логотип компании «VIVE», производителя систем виртуальной реальности">
+              <img src="https://via.placeholder.com/260x100" width="260" height="100" alt="Логотип компании «VIVE», производителя систем виртуальной реальности">
             </a>
           </li>
         </ul>
@@ -198,7 +242,7 @@
           проверить работоспособность покупки. Всякое бывает.
         </p>
         <a href="https://yandex.ru/maps/213/moscow/house/ulitsa_stroiteley_15/Z04YcwVpT0ADQFtvfXp5d3VrZA==/?ll=37.529655%2C55.686980&z=16.65">
-          <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Схема проезда">
+          <img src="https://via.placeholder.com/560x222" width="560" height="222" alt="Схема проезда">
         </a>
         <p>
           <a href="">Напишите нам</a>
@@ -206,43 +250,39 @@
       </section>
     </main>
     <footer> 
-      <section>
-        <h2>Как нас найти</h2>
+      <div>
         <a>
-          <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="Логотип интернет-магазина «DEVICE»">
+          <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
         </a>
         <p>
           г. Москва, ул. Строителей, 15<br>
           Тел.: +7 (495) 495-95-95
         </p>
-      </section>
-      <section>
-        <h2>Навигация по сайту</h2>
+      </div>
+      <div>
         <ul>
           <li><a href="">Доставка</a></li>
           <li><a href="">Гарантия</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
-      </section>
-      <section>
-        <h2>Пользовательское меню</h2>
+      </div>
+      <div>
         <ul>
           <li><a href="">Войти</a></li>
           <li><a href="">Сравнить</a></li>
           <li><a href="">Корзина</a></li>
         </ul>
-      </section>
-      <section>
-        <h2>Мы в соцсетях</h2>
+      </div>
+      <div>
         <ul>
           <li><a href="#">Вконтакте</a></li>
           <li><a href="#">Фейсбук</a></li>
           <li><a href="#">Инстаграм</a></li>
         </ul>
-      </section>
+      </div>
       <p>
         <a href="https://htmlacademy.ru/intensive/htmlcss">
-          <img src="https://via.placeholder.com/0x0" width="0" height="0" alt="«HTML Academy»">
+          <img src="https://via.placeholder.com/26.94x34" width="27" height="34" alt="«HTML Academy»">
         </a>
       </p>
     </footer>
