--- a/index.html
+++ b/index.html
@@ -1,111 +1,89 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
-
-<head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Девайс</title>
-  <link href="css/normalize.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
-</head>
-  
-<body>
-
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo">
-        <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
-      </a>
-      <!--
-      <form>
-        <input type="text" placeholder="Поиск по сайту">
-        <button type="submit"></button>
-      </form>
-      -->
-      <ul class="site-navigation">
-        <li><a href="catalog.html">Каталог товаров</a>
-          <ul class="product-navigation">
-            <li><a href="">Виртуальная реальность</a></li>
-            <li><a>Моноподы для селфи</a></li>
-            <li><a href="">Экшн-камеры</a></li>
-            <li><a href="">Фитнес-браслеты</a></li>
-            <li><a href="">Умные часы</a></li>
-            <li><a href="">Квадрокоптер</a></li>
-          </ul>
-        </li>
-        <li><a href="">Доставка</a></li>
-        <li><a href="">Гарантия</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
-      <ul class="user-navigation">
-        <li><a class="login-link" href="">Войти</a></li>
-        <li><a class="compare-list" href="">Сравнить</a></li>
-        <li><a class="basket" href="">Корзина</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="container">
-    <h1 class="visually-hidden">Интернет-магазин «DEVICE»</h1>
-    <section class="bestsellers">
-      <h2 class="visually-hidden">Бестселлеры</h2>
-      <ol class="bestsellers-list">
-        <li class="bestsellers-item">
-          <h3>Делай селфи,<br> 
-              как Бен Стиллер!</h3>
-          <figure class="bestsellers-image">
-            <img src="https://via.placeholder.com/384x486" width="384" height="486" alt="Самая длинная палка для селфи">
-            <figcaption class="bestsellers-description">
-              Самая длинная палка для селфи доступна в нашем магазине.<br>
-              Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
-            </figcaption>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Academy: Девайс</title>
+  </head>
+  <body>
+    <header> 
+      <nav>
+        <a>
+          <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+        </a>
+        <ul class="navigation">
+          <li><a href="catalog.html">Каталог товаров</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Гарантия</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+        <ul class="user-menu">
+          <li><a href="">Войти</a></li>
+          <li><a href="">Сравнить</a></li>
+          <li><a href="">Корзина</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Интернет-магазин «DEVICE»</h1>
+      <section>
+        <h2>Бестселлеры</h2>
+        <ol>
+          <li>
+          <h3>Делай селфи, как Бен Стиллер!</h3>
+          <figure>
+          <img src="https://via.placeholder.com/384x486" width="384" height="486" alt="Самая длинная палка для селфи">
+          <figcaption>
+            Самая длинная палка для селфи доступна в нашем магазине.<br> 
+            Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
+          </figcaption>
           </figure>
-          <table class="bestsellers-benefits">
-            <tr>
-              <th>Длина палки</th>
-              <th>Вес палки</th>
-              <th>Материал</th>
-            </tr>
-            <tr>
-              <td>8,5 м</td>
-              <td>5 кг</td>
-              <td>Карбон</td>
-            </tr>
+          <table>
+          <tr>
+            <th>Длина палки</th>
+            <th>Вес палки</th>
+            <th>Материал</th>
+          </tr>
+          <tr>
+            <td>8,5 м</td>
+            <td>5 кг</td>
+            <td>Карбон</td>
+          </tr>
           </table>
           <p>
-            <a class="button" href="">Подробнее</a>
+          <a href="">Подробнее</a>
           </p>
-        </li>
-        <li class="bestsellers-item">
+          </li>
+          <li>
           <h3>Худеем правильно!</h3>
-          <figure class="bestsellers-image">
-            <img src="https://via.placeholder.com/345x485" width="345" height="485" alt="Мотивирующий фитнес-браслет">
-            <figcaption class="bestsellers-description">
-              Мотивирующие фитнес-браслеты помогут найти в себе силы<br>
-              не пропускать занятия и соблюдать диету.
-            </figcaption>
+          <figure>
+          <img src="https://via.placeholder.com/345x485" width="345" height="485" alt="Мотивирующий фитнес-браслет">
+          <figcaption>
+            Мотивирующие фитнес-браслеты помогут найти в себе силы<br> 
+            не пропускать занятия и соблюдать диету.
+          </figcaption>
           </figure>
-          <table class="bestsellers-benefits">
-            <tr>
-              <th>Без подзарядки</th>
-            </tr>
-            <tr>
-              <td>48 часов</td>
-            </tr>
+          <table>
+          <tr>
+            <th>Без подзарядки</th>
+          </tr>
+          <tr>
+            <td>48 часов</td>
+          </tr>
           </table>
           <p>
-            <a class="button" href="">Подробнее</a>
+          <a href="">Подробнее</a>
           </p>
-        </li>
-        <li class="bestsellers-item">
-          <h3>Порхает как бабочка, жалит как пчела!</h3>
-          <figure class="bestsellers-image">
+          </li>
+          <li>
+            <h3>Порхает как бабочка, жалит как пчела!</h3>
+            <figure>
             <img src="https://via.placeholder.com/526x334" width="526" height="334" alt="Квадрокоптер с мощным лазером">
-            <figcaption class="bestsellers-description">
-              Этот обычный, на первый взгляд, квадрокоптер оснащен<br>
+            <figcaption>
+              Этот обычный, на первый взгляд, квадрокоптер оснащен<br> 
               мощным лазером, замаскированным под стандартную камеру.
             </figcaption>
-          </figure>
-          <table class="bestsellers-benefits">
+            </figure>
+            <table>
             <tr>
               <th>Дальность полета</th>
               <th>Радиус поражения</th>
@@ -114,208 +92,199 @@
               <td>800 м</td>
               <td>50 м</td>
             </tr>
-          </table>
-          <p>
-            <a class="button" href="">Подробнее</a>
-          </p>
-        </li>
-      </ol>
+            </table>
+            <p>
+            <a href="">Подробнее</a>
+            </p>
+            </li>
+        </ol>
       <nav>
-        <a class="slider slider-1" href="#">Первый слайд</a>
-        <a class="slider slider-2" href="#">Второй слайд</a>
-        <a class="slider slider-3" href="#">Третий слайд</a>
+        <a href="#">Первый слайд</a>
+        <a href="#">Второй слайд</a>
+        <a href="#">Третий слайд</a>
       </nav>
-    </section>
-    <section class="catalog-category">
-      <h2 class="visually-hidden">Каталог</h2>
-      <ul class="catalog-category-list">
-        <li class="catalog-category-item">
-          <a href="">
+      </section>
+      <section>
+        <h2>Каталог</h2>
+        <ul>
+          <li>
+            <a href="">
             <h3>Виртуальная реальность</h3>
             <p>
               <img src="https://via.placeholder.com/97x55" width="97" height="55" alt="Раздел «Виртуальная реальность»">
             </p>
-          </a>
-        </li>
-        <li class="catalog-category-item">
-          <a href="">
+            </a>
+          </li>
+          <li>
+            <a href="">
             <h3>Моноподы для селфи</h3>
             <p>
               <img src="https://via.placeholder.com/86x117" width="86" height="117" alt="Раздел «Моноподы для селфи»">
             </p>
-          </a>
-        </li>
-        <li class="catalog-category-item">
-          <a href="">
+            </a>
+          </li>
+          <li>
+            <a href="">
             <h3>Экшн-камеры</h3>
             <p>
               <img src="https://via.placeholder.com/71x87" width="71" height="87" alt="Раздел «Экшн-камеры»">
             </p>
-          </a>
-        </li>
-        <li class="catalog-category-item">
-          <a href="">
+            </a>
+          </li>
+          <li>
+            <a href="">
             <h3>Фитнес-браслеты</h3>
             <p>
               <img src="https://via.placeholder.com/107x65" width="107" height="65" alt="Раздел «Фитнес-браслеты»">
             </p>
-          </a>
-        </li>
-        <li class="catalog-category-item">
-          <a href="">
+            </a>
+          </li>
+          <li>
+            <a href="">
             <h3>Умные часы</h3>
             <p>
               <img src="https://via.placeholder.com/56x98" width="56" height="98" alt="Раздел «Умные часы»">
             </p>
-          </a>
-        </li>
-        <li class="catalog-category-item">
-          <a href="">
+            </a>
+          </li>
+          <li>
+            <a href="">
             <h3>Квадрокоптеры</h3>
             <p>
               <img src="https://via.placeholder.com/132x69" width="132" height="69" alt="">
             </p>
-          </a>
-        </li>
-      </ul>
-    </section>
-    <section class="services-description">
-      <h2 class="visually-hidden">Перечень услуг</h2>
-      <ul class="services-description-list">
-        <li class="services-description-item">
-          <h3>Доставка</h3>
-          <p>
-            Мы с удовольствием доставим ваш товар прямо к вашему<br>
-            подъезду совершенно бесплатно! Ведь мы неплохо<br>
-            заработаем, поднимая его на ваш этаж.
-          </p>
-        </li>
-        <li class="services-description-item">
-          <h3>Гарантия</h3>
-          <p>
-            Если из-за возгорания купленного у нас товара у вас сгорит дом —<br>
-            не переживайте, мы выдадим вам новый.<br>
-            Товар, не дом, конечно же.
-          </p>
-        </li>
-        <li class="services-description-item">
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Перечень услуг</h2>Раздел «Квадрокоптеры»
+        <ul>
+          <li>
+            <h3>Доставка</h3>
+            <p>
+              Мы с удовольствием доставим ваш товар прямо к вашему<br>  
+              подъезду совершенно бесплатно! Ведь мы неплохо<br>  
+              заработаем, поднимая его на ваш этаж.
+            </p>
+          </li>
+          <li>
+            <h3>Гарантия</h3>
+            <p>
+              Если из-за возгорания купленного у нас товара у вас сгорит дом —<br> 
+              не переживайте, мы выдадим вам новый.<br>
+              Товар, не дом, конечно же.
+            </p>
+          </li>
+          <li>
           <h3>Кредит</h3>
           <p>
-            Залезть в долговую яму стало проще! Кредитные консультанты<br>
-            подберут для вас наиболее выгодные<br>
+            Залезть в долговую яму стало проще! Кредитные консультанты<br> 
+            подберут для вас наиболее выгодные<br> 
             условия кредита. Выгодные для нашего банка, разумеется.
           </p>
-        </li>
-      </ul>
-      <ul class="services-description-navigation">
-      <nav>
-        <a class="button" href="#">Доставка</a>
-        <a class="button" href="#">Гарантия</a>
-        <a class="button" href="#">Кредит</a>
-      </nav>
-    </section>
-    <section class="partners">
-      <h2 class="visually-hidden">Производители</h2>
-      <ul class="partnership-list">
-        <li class="partners-item partners-item-1">
-          <a href="">
-            <img src="https://via.placeholder.com/260x100" width="260" height="100"
-              alt="Логотип компании «DJI», производителя мультикоптеров, микроконтроллеров, видеооборудования">
-          </a>
-        </li>
-        <li class="partners-item partners-item-2">
-          <a href="">
-            <img src="https://via.placeholder.com/260x100" width="260" height="100"
-              alt="Логотип компании «SP GADGETS», производителя качественных аксессуаров для экшн-камер GoPro">
-          </a>
-        </li>
-        <li class="partners-item partners-item-3">
-          <a href="">
-            <img src="https://via.placeholder.com/260x100" width="260" height="100"
-              alt="Логотип компании «GoPro», производителя экшн-камер GoPro и аксессуаров к ним">
-          </a>
-        </li>
-        <li class="partners-item partners-item-4">
-          <a href="">
-            <img src="https://via.placeholder.com/260x100" width="260" height="100"
-              alt="Логотип компании «VIVE», производителя систем виртуальной реальности">
-          </a>
-        </li>
-      </ul>
-    </section>
-    <section class="about-company">
-      <h2 class="visually-hidden">О компании</h2>
-      <h3>О нас</h3>
-      <p>
-        Огромный выбор гаджетов не оставит равнодушным гика,<br>
-        который есть в каждом из нас.
-      </p>
-      <p>
+          </li>
+        </ul>
+        <nav>
+          <a href="#">Доставка</a>
+          <a href="#">Гарантия</a>
+          <a href="#">Кредит</a>
+        </nav>
+      </section>
+      <section>
+        <h2>Производители</h2>
+        <ul>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/260x100" width="260" height="100" alt="Логотип компании «DJI», производителя мультикоптеров, микроконтроллеров, видеооборудования">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/260x100" width="260" height="100" alt="Логотип компании «SP GADGETS», производителя качественных аксессуаров для экшн-камер GoPro">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/260x100" width="260" height="100" alt="Логотип компании «GoPro», производителя экшн-камер GoPro и аксессуаров к ним">
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="https://via.placeholder.com/260x100" width="260" height="100" alt="Логотип компании «VIVE», производителя систем виртуальной реальности">
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>О нас</h2>
+        <p>
+          Огромный выбор гаджетов не оставит равнодушным гика,<br> 
+          который есть в каждом из нас.
+        </p>
+        <p>
         Мы можем доставить ваш товар в самые отдаленные точки<br>
         России! DEVICE работает со многими транспортными компаниями:
-      </p>
-      <ul>
-        <li>Деловые линии</li>
-        <li>Автотрейдинг</li>
-        <li>ЖелДорЭкспедиция</li>
-      </ul>
+        </p>
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <p>
+          <a href="">Подробнее о нас</a>
+        </p>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <p>
+          Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете<br> 
+          проверить работоспособность покупки. Всякое бывает.
+        </p>
+        <a href="https://yandex.ru/maps/213/moscow/house/ulitsa_stroiteley_15/Z04YcwVpT0ADQFtvfXp5d3VrZA==/?ll=37.529655%2C55.686980&z=16.65">
+          <img src="https://via.placeholder.com/560x222" width="560" height="222" alt="Схема проезда">
+        </a>
+        <p>
+          <a href="">Напишите нам</a>
+        </p>
+      </section>
+    </main>
+    <footer> 
+      <div>
+        <a>
+          <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+        </a>
+        <p>
+          г. Москва, ул. Строителей, 15<br>
+          Тел.: +7 (495) 495-95-95
+        </p>
+      </div>
+      <div>
+        <ul>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Гарантия</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </div>
+      <div>
+        <ul>
+          <li><a href="">Войти</a></li>
+          <li><a href="">Сравнить</a></li>
+          <li><a href="">Корзина</a></li>
+        </ul>
+      </div>
+      <div>
+        <ul>
+          <li><a href="#">Вконтакте</a></li>
+          <li><a href="#">Фейсбук</a></li>
+          <li><a href="#">Инстаграм</a></li>
+        </ul>
+      </div>
       <p>
-        <a class="button" href="">Подробнее о нас</a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="https://via.placeholder.com/26.94x34" width="27" height="34" alt="«HTML Academy»">
+        </a>
       </p>
-    </section>
-    <section class="contacts-company">
-      <h3>Контакты</h3>
-      <p>
-        Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете<br>
-        проверить работоспособность покупки. Всякое бывает.
-      </p>
-      <a
-        href="https://yandex.ru/maps/213/moscow/house/ulitsa_stroiteley_15/Z04YcwVpT0ADQFtvfXp5d3VrZA==/?ll=37.529655%2C55.686980&z=16.65">
-        <img src="https://via.placeholder.com/560x222" width="560" height="222" alt="Схема проезда">
-      </a>
-      <p>
-        <a class="button" href="">Напишите нам</a>
-      </p>
-    </section>
-  </main>
-
-  <footer class="main-footer">
-    <div class="footer-contacts">
-      <a>
-        <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
-      </a>
-      <p>
-        г. Москва, ул. Строителей, 15<br>
-        Тел.: +7 (495) 495-95-95
-      </p>
-    </div>
-    <div class="footer-site-navigation">
-      <ul>
-        <li><a href="">Доставка</a></li>
-        <li><a href="">Гарантия</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
-    </div>
-    <div class="footer-user-navigation">
-      <ul>
-        <li><a href="">Войти</a></li>
-        <li><a href="">Сравнить</a></li>
-        <li><a href="">Корзина</a></li>
-      </ul>
-    </div>
-    <div class="footer-social">
-      <ul>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
-      </ul>
-    </div>
-    <p>
-      <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="https://via.placeholder.com/26.94x34" width="27" height="34" alt="«HTML Academy»">
-      </a>
-    </p>
-  </footer>
-
-</body>
+    </footer>
+  </body>
 </html>
