--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <h2 class="visually-hidden">Бестселлеры</h2>
       <ol class="bestsellers-list">
         <li class="bestsellers-item">
+          <span class="num">01</span>
           <h3>Делай селфи,<br> 
               как Бен Стиллер!</h3>
           <figure class="bestsellers-image">
@@ -76,6 +77,7 @@
           </p>
         </li>
         <li class="bestsellers-item">
+          <span class="num">02</span>
           <h3>Худеем правильно!</h3>
           <figure class="bestsellers-image">
             <img src="https://via.placeholder.com/345x485" width="345" height="485" alt="Мотивирующий фитнес-браслет">
@@ -97,6 +99,7 @@
           </p>
         </li>
         <li class="bestsellers-item">
+          <span class="num">03</span>
           <h3>Порхает как бабочка, жалит как пчела!</h3>
           <figure class="bestsellers-image">
             <img src="https://via.placeholder.com/526x334" width="526" height="334" alt="Квадрокоптер с мощным лазером">
