--- a/catalog.html
+++ b/catalog.html
@@ -1,167 +1,182 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Каталог товаров — интернет-магазин Девайс</title>
-  </head>
-  <body>
-    <header> 
-      <nav>
-        <a href="index.html">
-            <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
-        </a>
-        <form>
-            <input type="text" placeholder="Поиск по сайту">
-            <button type="submit"></button>
-        </form>
-        <ul class="navigation">
-            <li><a href="catalog.html">Каталог товаров</a>
-                <ul>
-                    <li><a href="">Виртуальная реальность</a></li>
-                    <li><a>Моноподы для селфи</a></li>
-                    <li><a href="">Экшн-камеры</a></li>
-                    <li><a href="">Фитнес-браслеты</a></li>
-                    <li><a href="">Умные часы</a></li>
-                    <li><a href="">Квадрокоптер</a></li>
-                </ul>
-              </li>
-            <li><a href="">Доставка</a></li>
-            <li><a href="">Гарантия</a></li>
-            <li><a href="">Контакты</a></li>
+<html class="page" lang="ru">
+
+<head>
+  <meta charset="utf-8">
+  <title>Каталог товаров — интернет-магазин Девайс</title>
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body class="page-body inner-page">
+
+<header class="main-header">
+  <nav class="main-navigation">
+    <a href="index.html">
+      <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+    </a>
+    <!--
+    <form>
+      <input type="text" placeholder="Поиск по сайту">
+      <button type="submit"></button>
+    </form>
+      -->
+    <ul class="site-navigation">
+      <li><a href="catalog.html">Каталог товаров</a>
+        <ul class="product-navigation">
+          <li><a href="">Виртуальная реальность</a></li>
+          <li><a>Моноподы для селфи</a></li>
+          <li><a href="">Экшн-камеры</a></li>
+          <li><a href="">Фитнес-браслеты</a></li>
+          <li><a href="">Умные часы</a></li>
+          <li><a href="">Квадрокоптер</a></li>
         </ul>
-        <ul class="user-menu">
-            <li><a href="">Валентин Петухов</a></li> 
-            <li><a href="">Выйти</a></li>
-            <li><a href="">Сравнить</a></li>
-            <li><a href="">Корзина</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-        <h1>Моноподы для селфи</h1>
-        <ul>
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="catalog.html">Каталог товаров</a></li>
-            <li><a>Моноподы для селфи</a></li>
-        </ul>
-        <section>
-            <h2>Фильтр товаров</h2>
-            <!-- Здесь будет форма фильтра -->
-        </section>
-        <section>
-            <h2>Сортировка</h2>
-            <ul>
-                <li><a href="">По цене</a></li>
-                <li><a href="">По типу</a></li>
-                <li><a href="">По популярности</a></li>
-                <li><a href="">Сортировать по возрастанию</a></li>
-                <li><a href="">Сортировать по убыванию</a></li>
-            </ul>
-        </section>
-        <section>
-            <h2>Список моноподов</h2>
-            <ul>
-                <li>
-                    <a href="">
-                    <h3>Любительская селфи-палка</h3>
-                    <p>
-                    <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
-                    </p>
-                    </a>
-                    <p>500 руб.</p>
-                    <div>
-                        <button type="button">В корзину</button>
-                        <button type="button">Добавить к сравнению</button>
-                    </div>
-                </li>
-                <li>
-                    <a href="">
-                    <h3>Профессиональная селфи-палка</h3>
-                    <p>
-                    <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Профессиональная селфи-палка">
-                    </p>
-                    </a>
-                    <p>1500 руб.</p>
-                    <div>
-                        <button type="button">В корзину</button>
-                        <button type="button">Добавить к сравнению</button>
-                    </div>
-                </li>
-                <li>
-                    <a href="">
-                    <h3>Непотопляемая селфи-палка</h3>
-                    <p>
-                    <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Непотопляемая селфи-палка">
-                    </p>
-                    </a>
-                    <p>2500 руб.</p>
-                    <div>
-                        <button type="button">В корзину</button>
-                        <button type="button">Добавить к сравнению</button>
-                    </div>
-                </li>
-                <li>
-                    <a href="">
-                    <h3>Селфи-палка «Следуй за мной»</h3>
-                    <p>
-                    <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
-                    </p>
-                    </a>
-                    <p>4900 руб.</p>
-                    <p>New</p>
-                    <div>
-                        <button type="button">В корзину</button>
-                        <button type="button">Добавить к сравнению</button>
-                    </div>
-                </li>
-            </ul>
-        </section>
-        <div>
-            <ul>
-                <li><a href="">Назад</a></li>
-                <li><a>1</a></li>
-                <li><a href="">2</a></li>
-                <li><a href="">3</a></li>
-                <li><a href="">Вперед</a></li>
-            </ul>
-        </div>
-    </main>
-    <footer>
-        <div>
-            <a>
-              <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
-            </a>
+      </li>
+      <li><a href="">Доставка</a></li>
+      <li><a href="">Гарантия</a></li>
+      <li><a href="">Контакты</a></li>
+    </ul>
+    <ul class="user-navigation">
+      <li><a href="">Валентин Петухов</a></li>
+      <li><a href="">Выйти</a></li>
+      <li><a href="">Сравнить</a></li>
+      <li><a href="">Корзина</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main class="page-catalog-container">
+  <h1 class="page-catalog-title">Моноподы для селфи</h1>
+  <ul class="breadcrumbs">
+    <li><a href="index.html">Главная</a></li>
+    <li><a href="catalog.html">Каталог товаров</a></li>
+    <li><a>Моноподы для селфи</a></li>
+  </ul>
+  <section class="catalog-section">
+    <h2 class="visually-hidden">Перечень товаров - моноподы</h2>
+    <div class="product-filter">
+      <h3 class="page-catalog-subtitle">Фильтр</h3>
+      <!-- Здесь будет форма фильтра -->
+    </div>
+    <div class="sorting">
+      <h3 class="page-catalog-subtitle">Сортировка</h3>
+    <ul>
+      <li><a href="">По цене</a></li>
+      <li><a href="">По типу</a></li>
+      <li><a href="">По популярности</a></li>
+      <li><a href="">Сортировать по возрастанию</a></li>
+      <li><a href="">Сортировать по убыванию</a></li>
+    </ul>
+    </div>
+    <div class="product-list">
+      <h3 class="visually-hidden">Список товаров</h3>
+      <ul class="catalog-category-list">
+        <li class="catalog-category-item">
+        <a href="">
+          <h3>Любительская селфи-палка</h3>
             <p>
-              г. Москва, ул. Строителей, 15<br>
-              Тел.: +7 (495) 495-95-95
+              <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
             </p>
-          </div>
+        </a>
+        <p class="price">500 руб.</p>
+        <div>
+          <button type="button" class="button">В корзину</button>
+          <button type="button" class="compare">Добавить к сравнению</button>
+        </div>
+        </li>
+        <li class="catalog-category-item">
+        <a href="">
+          <h3>Профессиональная селфи-палка</h3>
+            <p>
+                <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Профессиональная селфи-палка">
+            </p>
+        </a>
+        <p class="price">1500 руб.</p>
+        <div>
+          <button type="button" class="button">В корзину</button>
+          <button type="button" class="compare">Добавить к сравнению</button>
+        </div>
+        </li>
+        <li class="catalog-category-item">
+          <a href="">
+            <h3>Непотопляемая селфи-палка</h3>
+              <p>
+                <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Непотопляемая селфи-палка">
+              </p>
+          </a>
+          <p class="price">2500 руб.</p>
           <div>
-            <ul>
-              <li><a href="">Доставка</a></li>
-              <li><a href="">Гарантия</a></li>
-              <li><a href="">Контакты</a></li>
-            </ul>
+            <button type="button" class="button">В корзину</button>
+            <button type="button" class="compare">Добавить к сравнению</button>
           </div>
+        </li>
+        <li class="catalog-category-item">
+          <a href="">
+            <h3>Селфи-палка «Следуй за мной»</h3>
+              <p>
+                <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+              </p>
+          </a>
+          <p class="price">4900 руб.</p>
+          <p>New</p>
           <div>
-            <ul>
-              <li><a href="">Валентин Петухов</a></li> 
-              <li><a href="">Выйти</a></li>
-              <li><a href="">Сравнить</a></li>
-              <li><a href="">Корзина</a></li>
-            </ul>
+            <button type="button" class="button">В корзину</button>
+            <button type="button" class="compare">Добавить к сравнению</button>
           </div>
-          <div>
-            <ul>
-              <li><a href="#">Вконтакте</a></li>
-              <li><a href="#">Фейсбук</a></li>
-              <li><a href="#">Инстаграм</a></li>
-            </ul>
-          </div>
-          <p>
-            <a href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="https://via.placeholder.com/26.94x34" width="27" height="34" alt="«HTML Academy»">
-            </a>
-          </p>
-    </footer>
-  </body>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+    <div class="page-navigation">
+      <ul class="page-button">
+        <li><a href="" class="page-back">Назад</a></li>
+        <li><a class="page-number">1</a></li>
+        <li><a href="" class="page-number">2</a></li>
+        <li><a href="" class="page-number">3</a></li>
+        <li><a href="" class="page-forward">Вперед</a></li>
+      </ul>
+    </div>
+
+  </main>
+
+  <footer class="main-footer">
+    <div class="footer-contacts">
+      <a>
+        <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+      </a>
+      <p>
+        г. Москва, ул. Строителей, 15<br>
+        Тел.: +7 (495) 495-95-95
+      </p>
+    </div>
+    <div class="footer-site-navigation">
+      <ul>
+        <li><a href="">Доставка</a></li>
+        <li><a href="">Гарантия</a></li>
+        <li><a href="">Контакты</a></li>
+      </ul>
+    </div>
+    <div class="footer-user-navigation">
+      <ul>
+        <li><a href="">Валентин Петухов</a></li>
+        <li><a href="">Выйти</a></li>
+        <li><a href="">Сравнить</a></li>
+        <li><a href="">Корзина</a></li>
+      </ul>
+    </div>
+    <div class="footer-social">
+      <ul>
+        <li><a href="#">Вконтакте</a></li>
+        <li><a href="#">Фейсбук</a></li>
+        <li><a href="#">Инстаграм</a></li>
+      </ul>
+    </div>
+    <p>
+      <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="https://via.placeholder.com/26.94x34" width="27" height="34" alt="«HTML Academy»">
+      </a>
+    </p>
+  </footer>
+
+</body>
