Поправила стилизацию внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -61,7 +61,7 @@
     <div class="sorting">
       <h3 class="page-catalog-subtitle">Сортировка</h3>
     <ul>
-      <li><a href="">По цене</a></li>
+      <li class="sort-by-price"><a href="">По цене</a></li>
       <li><a href="">По типу</a></li>
       <li><a href="">По популярности</a></li>
       <li><a href="">Сортировать по возрастанию</a></li>
@@ -131,7 +131,7 @@
     <div class="page-navigation">
       <ul class="page-button">
         <li><a href="" class="page-back">Назад</a></li>
-        <li><a class="page-number">1</a></li>
+        <li><a class="page-number page-1">1</a></li>
         <li><a href="" class="page-number">2</a></li>
         <li><a href="" class="page-number">3</a></li>
         <li><a href="" class="page-forward">Вперед</a></li>
