Графика всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
 <header class="main-header">
   <nav class="main-navigation">
     <a href="index.html">
-      <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+      <img src="img\logo_black.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
     </a>
     <!--
     <form>
@@ -75,7 +75,7 @@
         <a href="">
           <h3>Любительская селфи-палка</h3>
             <p>
-              <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Любительская селфи-палка">
+              <img src="img/item-1 1.jpg" width="360" height="380" alt="Любительская селфи-палка. Внешний вид.">
             </p>
         </a>
         <p class="price">500 руб.</p>
@@ -88,7 +88,7 @@
         <a href="">
           <h3>Профессиональная селфи-палка</h3>
             <p>
-                <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Профессиональная селфи-палка">
+                <img src="img/item-2 1.jpg" width="360" height="380" alt="Профессиональная селфи-палка. Внешний вид.">
             </p>
         </a>
         <p class="price">1500 руб.</p>
@@ -101,7 +101,7 @@
           <a href="">
             <h3>Непотопляемая селфи-палка</h3>
               <p>
-                <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Непотопляемая селфи-палка">
+                <img src="img/item-3 1.jpg" width="360" height="380" alt="Непотопляемая селфи-палка. Внешний вид.">
               </p>
           </a>
           <p class="price">2500 руб.</p>
@@ -114,7 +114,7 @@
           <a href="">
             <h3>Селфи-палка «Следуй за мной»</h3>
               <p>
-                <img src="https://via.placeholder.com/360x380" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
+                <img src="img/item-4 1.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной». Внешний вид.">
               </p>
           </a>
           <p class="price">4900 руб.</p>
@@ -143,7 +143,7 @@
   <footer class="main-footer">
     <div class="footer-contacts">
       <a>
-        <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+        <img src="img/logo_yellow.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
       </a>
       <p>
         г. Москва, ул. Строителей, 15<br>
@@ -174,7 +174,7 @@
     </div>
     <p>
       <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="https://via.placeholder.com/26.94x34" width="27" height="34" alt="«HTML Academy»">
+        <img src="img/logo-html.svg" width="27" height="34" alt="Перейти на страницу интенсива «HTML и CSS. Профессиональная вёрстка сайтов»">
       </a>
     </p>
   </footer>
