--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
   
-<body>
+<body class="page-body">
 
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
-        <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+        <img src="img/logo_black.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
       </a>
       <!--
       <form>
@@ -54,7 +54,7 @@
           <h3>Делай селфи,<br> 
               как Бен Стиллер!</h3>
           <figure class="bestsellers-image">
-            <img src="https://via.placeholder.com/384x486" width="384" height="486" alt="Самая длинная палка для селфи">
+            <img src="img/slider-1 1.png" width="384" height="486" alt="Самая длинная палка для селфи">
             <figcaption class="bestsellers-description">
               Самая длинная палка для селфи доступна в нашем магазине.<br>
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
@@ -80,7 +80,7 @@
           <span class="num">02</span>
           <h3>Худеем правильно!</h3>
           <figure class="bestsellers-image">
-            <img src="https://via.placeholder.com/345x485" width="345" height="485" alt="Мотивирующий фитнес-браслет">
+            <img src="img/slider-2 1.png" width="345" height="485" alt="Мотивирующий фитнес-браслет">
             <figcaption class="bestsellers-description">
               Мотивирующие фитнес-браслеты помогут найти в себе силы<br>
               не пропускать занятия и соблюдать диету.
@@ -102,7 +102,7 @@
           <span class="num">03</span>
           <h3>Порхает как бабочка, жалит как пчела!</h3>
           <figure class="bestsellers-image">
-            <img src="https://via.placeholder.com/526x334" width="526" height="334" alt="Квадрокоптер с мощным лазером">
+            <img src="img/slider-3 1.png" width="526" height="334" alt="Квадрокоптер с мощным лазером">
             <figcaption class="bestsellers-description">
               Этот обычный, на первый взгляд, квадрокоптер оснащен<br>
               мощным лазером, замаскированным под стандартную камеру.
@@ -222,25 +222,25 @@
       <ul class="partnership-list">
         <li class="partners-item partners-item-1">
           <a href="">
-            <img src="https://via.placeholder.com/260x100" width="260" height="100"
+            <img src="img/logo-1 1.svg" width="260" height="100"
               alt="Логотип компании «DJI», производителя мультикоптеров, микроконтроллеров, видеооборудования">
           </a>
         </li>
         <li class="partners-item partners-item-2">
           <a href="">
-            <img src="https://via.placeholder.com/260x100" width="260" height="100"
+            <img src="img/logo-2 1.svg" width="260" height="100"
               alt="Логотип компании «SP GADGETS», производителя качественных аксессуаров для экшн-камер GoPro">
           </a>
         </li>
         <li class="partners-item partners-item-3">
           <a href="">
-            <img src="https://via.placeholder.com/260x100" width="260" height="100"
+            <img src="img/logo-3 1.svg" width="260" height="100"
               alt="Логотип компании «GoPro», производителя экшн-камер GoPro и аксессуаров к ним">
           </a>
         </li>
         <li class="partners-item partners-item-4">
           <a href="">
-            <img src="https://via.placeholder.com/260x100" width="260" height="100"
+            <img src="img/logo-4 1.svg" width="260" height="100"
               alt="Логотип компании «VIVE», производителя систем виртуальной реальности">
           </a>
         </li>
@@ -274,7 +274,7 @@
       </p>
       <a
         href="https://yandex.ru/maps/213/moscow/house/ulitsa_stroiteley_15/Z04YcwVpT0ADQFtvfXp5d3VrZA==/?ll=37.529655%2C55.686980&z=16.65">
-        <img src="https://via.placeholder.com/560x222" width="560" height="222" alt="Схема проезда">
+        <img src="img/map 1.png" width="560" height="222" alt="Схема проезда">
       </a>
       <p>
         <a class="button" href="">Напишите нам</a>
@@ -285,7 +285,7 @@
   <footer class="main-footer">
     <div class="footer-contacts">
       <a>
-        <img src="https://via.placeholder.com/163x35" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
+        <img src="img/logo_yellow.svg" width="163" height="35" alt="Логотип интернет-магазина «DEVICE»">
       </a>
       <p>
         г. Москва, ул. Строителей, 15<br>
@@ -315,7 +315,7 @@
     </div>
     <p>
       <a class="footer-copyright" href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="https://via.placeholder.com/26.94x34" width="27" height="34" alt="«HTML Academy»">
+        <img src="img/logo-html.svg" width="27" height="34" alt="Перейти на страницу интенсива «HTML и CSS. Профессиональная вёрстка сайтов»">
       </a>
     </p>
   </footer>
