Поправила графику всех страниц

--- a/index.html
+++ b/index.html
@@ -217,30 +217,30 @@
         <a class="button" href="#">Кредит</a>
       </nav>
     </section>
-    <section class="partners">
+    <section class="partners">s
       <h2 class="visually-hidden">Производители</h2>
       <ul class="partnership-list">
         <li class="partners-item partners-item-1">
-          <a href="">
-            <img src="img/logo-1 1.svg" width="260" height="100"
+          <a href="img/logo-1.svg">
+            <img src="img/logo-1.png" width="260" height="100"
               alt="Логотип компании «DJI», производителя мультикоптеров, микроконтроллеров, видеооборудования">
           </a>
         </li>
         <li class="partners-item partners-item-2">
           <a href="">
-            <img src="img/logo-2 1.svg" width="260" height="100"
+            <img src="img/logo-2.png" width="260" height="100"
               alt="Логотип компании «SP GADGETS», производителя качественных аксессуаров для экшн-камер GoPro">
           </a>
         </li>
         <li class="partners-item partners-item-3">
           <a href="">
-            <img src="img/logo-3 1.svg" width="260" height="100"
+            <img src="img/logo-3.png" width="260" height="100"
               alt="Логотип компании «GoPro», производителя экшн-камер GoPro и аксессуаров к ним">
           </a>
         </li>
         <li class="partners-item partners-item-4">
           <a href="">
-            <img src="img/logo-4 1.svg" width="260" height="100"
+            <img src="img/logo-4.png" width="260" height="100"
               alt="Логотип компании «VIVE», производителя систем виртуальной реальности">
           </a>
         </li>
